test/bad/loops/for19.px

for x in 0...10, 'a'..'z' step 5, '5' do
    skip
